--- a/src/app/shared/contact-mobile-map/contact-mobile-map.component.html
+++ b/src/app/shared/contact-mobile-map/contact-mobile-map.component.html
@@ -1,4 +1,4 @@
 <!-- Contact Map section using leaflet library  -->
+<app-loader [isLoading]="isLoading"></app-loader>
 <div id="map" [@enterFromTop]="animationStates.enterFromTop"  [ngClass]="{'mobile':isMobile}" >
-
 </div>
