--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -5,7 +5,7 @@
 
     .we-are-div{
         position: relative;
-        z-index: 2;//added
+        z-index: 2;
     }
 
     .first-bg {
@@ -15,7 +15,7 @@
 
         .about-com{
             position: relative;
-            z-index: 3; //added
+            z-index: 3; 
         }
     }
 
@@ -24,7 +24,6 @@
         background: $black url(../../../assets/background-squares.svg ) center / cover;
         padding-top: 50px;
         margin-top: -10%;
-
 
         h1.grey {
             padding-right: 60px;
@@ -40,21 +39,14 @@
         }
     }
 
-
-    .second-bg::before {}
-
-
     .fifth-bg {
         position: relative;
         background: url(../../../assets/background-squares-light.svg ) center / cover;
-
     }
 
     .third-bg {
         position: relative;
-        // background: url(../../../assets/footer-bg.png) center / cover repeat-y;
     }
-
 
     .third-bg::before {
         content: "";
@@ -63,10 +55,8 @@
         left: 0;
         width: 100%;
         height: 95%;
-        // background: url(../../../assets/footer-bg.png) center / cover repeat-y;
         background: url(../../../assets/home-bg-squares.svg) center / cover repeat-y;
         z-index: 0;
-        // transform: rotate(180deg);
     }
 
     app-we-are-home {
@@ -83,7 +73,7 @@
     .poster-container {
         position: relative;
         margin: 0px 20px 20px 20px;
-        z-index: 4; //added
+        z-index: 4; 
     }
 
     h1 {
@@ -180,19 +170,8 @@
 
     .fifth-bg {
         position: relative;
-
         .media {
             margin: 10px;
         }
     }
-
-}
-
-
-.animated-element {
-    /* Define initial styles */
-    // opacity: 0;
-    // transform: translateY(-50px);
-    // /* Define transition for smoother animation */
-    // transition: opacity 0.5s, transform 0.5s;
 }
